--- a/controlled_dataset.ipynb
+++ b/controlled_dataset.ipynb
@@ -65,10 +65,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "125df455",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.457076</td>\n",
+       "      <td>-1.559976</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.125677</td>\n",
+       "      <td>1.410847</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.073447</td>\n",
+       "      <td>-1.953269</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.191761</td>\n",
+       "      <td>-0.474364</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.974798</td>\n",
+       "      <td>-1.279566</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         x1        x2  label\n",
+       "0  4.457076 -1.559976      0\n",
+       "1  5.125677  1.410847      0\n",
+       "2  1.073447 -1.953269      0\n",
+       "3  4.191761 -0.474364      0\n",
+       "4  3.974798 -1.279566      0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Save to CSV: columns x1, x2, label\n",
     "df = pd.DataFrame({\n",
@@ -77,12 +152,15 @@
     "    \"label\": y\n",
     "})\n",
     "csv_path = \"conftr_toy_dataset.csv\"\n",
-    "df.to_csv(csv_path, index=False)"
+    "df.to_csv(csv_path, index=False)\n",
+    "\n",
+    "# Quick peek at the first few rows\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "125a2e86",
    "metadata": {},
    "outputs": [
@@ -98,9 +176,6 @@
     }
    ],
    "source": [
-    "# Quick peek at the first few rows\n",
-    "preview = df.head()\n",
-    "\n",
     "# Simple scatter plot (no explicit colours specified)\n",
     "plt.figure(figsize=(6, 6))\n",
     "plt.scatter(df[\"x1\"], df[\"x2\"], s=8)  # default colour cycle\n",
@@ -115,29 +190,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05fa982e",
+   "id": "b491f478",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ace_tools'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mace_tools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtools\u001b[39;00m\n\u001b[32m      3\u001b[39m tools.display_dataframe_to_user(name=\u001b[33m\"\u001b[39m\u001b[33mPreview of toy dataset (first 5 rows)\u001b[39m\u001b[33m\"\u001b[39m, dataframe=preview)\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'ace_tools'"
-     ]
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "source": [
-    "import ace_tools_open\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b491f478",
+   "id": "9efbc874",
    "metadata": {},
    "outputs": [],
    "source": []
